# wisp

./: LICENSE  README.md
1-public_domain_poems/: README.md  public_domain_shortlist.txt
2-poetry-screenshotter/: README.md  pyproject.toml  setup.py
2-poetry-screenshotter/poems/: an-ode-to-ben-jonson.html
2-poetry-screenshotter/poetry_screenshotter/: __init__.py  api.py  cli.py  core.py  exceptions.py
2-wisp-bench/: README.md
2-wisp-bench/i-label-classification/: shortlist.txt  wisp_classifications.jsonl
2-wisp-bench/ii-wisp-bench/: benchmark.py  llm_ocr.py  order.txt  wisp-bench.jsonl
2-wisp-bench/ii-wisp-bench/poem_texts/claude/: an-ode-to-ben-jonson.txt
2-wisp-bench/ii-wisp-bench/poem_texts/gemini/: an-ode-to-ben-jonson.txt
2-wisp-bench/ii-wisp-bench/poem_texts/openai/: an-ode-to-ben-jonson.txt
2-wisp-bench/ii-wisp-bench/poem_texts/wispify/: an-ode-to-ben-jonson_poem_text.txt
2-wisp-bench/prodigy-recipes/: wisp-multi-method.py
3-wisp-bench/: README.md  shortlist.py  wisp_mapping.py
3-wisp-bench/i-label-classification/: shortlist.py  wisp_mapping.json  wisp_mapping.py
3-wisp-bench/ii-wisp-bench/: visualize.py
3-wisp-bench/ii-wisp-bench/poem_texts/resiliparse/: an-ode-to-ben-jonson_poem_text.txt
3-wisp-bench/ii-wisp-bench/poem_texts/trafilatura/: an-ode-to-ben-jonson_poem_text.txt
3-wisp-bench/ii-wisp-bench/scores/: wisp-bench.json
3-wisp-bench/prodigy-recipes/: wisp-label-classification.py  wisp-sublevel-annotation.py
3-wisp-unspacer/: wisp-unspacer.py
4-wisp-unspacer/: README.md
