[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poetry-screenshotter"
version = "0.1.0"
description = "Convert HTML files to PNG images by screenshotting selected div content."
readme = "README.md"
authors = [
    {name = "Sriharsh Bhyravajjula", email = "foo@bar.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "click>=8.0.0",
    "fastapi>=0.104.0",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
poetry-screenshotter = "poetry_screenshotter.cli:main"

[project.urls]
Homepage = "https://github.com/darthbhyrava/wisp"
Repository = "https://github.com/darthbhyrava/wisp"
Issues = "https://github.com/darthbhyrava/wisp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["poetry_screenshotter*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.html"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"